# radar

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  test_import.ics
alembic/: env.py
docs/: API.md  SPEC.md  architecture.html  schema.sql
migrations/: 002_event_type_to_text.sql  003_knowledge_preferences.sql  004_rename_action_items_to_todos.sql
scripts/: seed_test_family.sql
src/: config.py  db.py  llm.py  whatsapp_client.py
src/actions/: gcal.py  gcal_outbox_processor.py  gcal_reconciler.py  state.py  whatsapp.py
src/agents/: calendar.py  context.py  onboarding.py  recurrence_detector.py  reminders.py  schemas.py
src/api/: health.py  internal.py  main.py  oauth.py  webhooks.py
src/auth/: google_client.py  oauth.py  tenants.py  tokens.py
src/extraction/: calendar.py  dedup.py  email.py  router.py  schemas.py
src/ingestion/: forward.py  gcal.py  gmail.py  ics.py  schemas.py  whatsapp.py
src/state/: children.py  events.py  families.py  feedback.py  learning.py  memory.py  models.py  outbox.py  pending.py  preferences.py  schedules.py  todos.py
src/utils/: button_ids.py  phone.py  rrule.py  timezone.py
tests/: conftest.py
tests/integration/: test_tenant_isolation.py
tests/unit/: test_all_day_events.py  test_calendar_agent.py  test_calendar_detector.py  test_children.py  test_config.py  test_dedup.py  test_email_extraction.py  test_event_attendees.py  test_event_lifecycle.py  test_events.py  test_families.py  test_gcal_tentative.py  test_gmail_attachments.py  test_ics.py  test_oauth.py  (+9 more)
(+4 files in other folders)
